--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	<title>Gav Life</title>
 </head>
 <body>
-<center><h1>Projects</h1></center>
+<center>
+	<h1>Projects</h1>
+	<hr>
+	<ul>
+		<li><a href="pydroid/pydroid.html">Pydroid: Framework to create android apps with python</a></li>
+	</ul>
+</center>
 </body>
 </html>
