--- a/pydroid/pydroid.html
+++ b/pydroid/pydroid.html
@@ -6,6 +6,10 @@
 	<title>Pydroid</title>
 </head>
 <body>
-
+<center><h1>Pydroid</h1></center>
+<ul>
+	<li><a href="architecture/architecture.html">Architecture</a></li>
+	<li><a href="diary/diary.html">Diary</a></li>
+</ul>
 </body>
 </html>
